unpackaged/main/default/objects/pse__Proj__c/fields/pse__Jira_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Jira_Project_Type__c</fullName>
    <description>Project type in Jira.</description>
    <inlineHelpText>Project type in Jira.</inlineHelpText>
    <label>Jira Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>business</fullName>
                <label>Business</label>
            </value>
            <value>
                <fullName>software</fullName>
                <label>Software</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>