unpackaged/main/default/objects/pse__Proj__c/fields/pse__Location__c.field-meta.xml
<CustomField>
    <fullName>pse__Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALABAMA</fullName>
            </value>
            <value>
                <fullName>ALASKA</fullName>
            </value>
            <value>
                <fullName>AMERICAN SAMOA</fullName>
            </value>
            <value>
                <fullName>ANZAC</fullName>
            </value>
            <value>
                <fullName>ARIZONA</fullName>
            </value>
            <value>
                <fullName>ARKANSAS</fullName>
            </value>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>COLORADO</fullName>
            </value>
            <value>
                <fullName>CONNECTICUT</fullName>
            </value>
            <value>
                <fullName>DELAWARE</fullName>
            </value>
            <value>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>FEDERATED STATES OF MICRONESIA</fullName>
            </value>
            <value>
                <fullName>FLORIDA</fullName>
            </value>
            <value>
                <fullName>GEORGIA</fullName>
            </value>
            <value>
                <fullName>GUAM</fullName>
            </value>
            <value>
                <fullName>HAWAII</fullName>
            </value>
            <value>
                <fullName>IDAHO</fullName>
            </value>
            <value>
                <fullName>ILLINOIS</fullName>
            </value>
            <value>
                <fullName>INDIANA</fullName>
            </value>
            <value>
                <fullName>IOWA</fullName>
            </value>
            <value>
                <fullName>KANSAS</fullName>
            </value>
            <value>
                <fullName>KENTUCKY</fullName>
            </value>
            <value>
                <fullName>LATIN AMERICA</fullName>
            </value>
            <value>
                <fullName>LOUISIANA</fullName>
            </value>
            <value>
                <fullName>MAINE</fullName>
            </value>
            <value>
                <fullName>MARSHALL ISLANDS</fullName>
            </value>
            <value>
                <fullName>MARYLAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>