unpackaged/main/default/objects/pse__Proj__c/fields/pse__Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Planned_Hours__c</fullName>
    <inlineHelpText>The number of hours planned for this project</inlineHelpText>
    <label>Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>