unpackaged/main/default/objects/pse__Proj__c/fields/pse__Pre_Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Pre_Bill_Type__c</fullName>
    <label>Pre-Bill Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>