unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Type__c</fullName>
    <description>A descriptive classification of the project</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>IBS</fullName>
            </value>
            <value>
                <fullName>PS Subscription</fullName>
            </value>
            <value>
                <fullName>Packaged Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>