unpackaged/main/default/objects/pse__Proj__c/fields/pse__Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Schedule_Status__c</fullName>
    <description>Select the current schedule status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
    <inlineHelpText>Select the current schedule status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
    <label>Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>