unpackaged/main/default/objects/pse__Proj__c/fields/pse__Total_Submitted_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Submitted_Hours__c</fullName>
    <description>The number of hours spent on a project. Calculated using the total hours on submitted or approved timecards, when the Assignment lookup is not blank and the end date is before or the same as the date in the Hours Cut Off Date field.</description>
    <inlineHelpText>The number of hours spent on a project. Calculated using the total hours on submitted or approved timecards, when the Assignment lookup is not blank and the end date is before or the same as the date in the Hours Cut Off Date field.</inlineHelpText>
    <label>Total Submitted Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>