unpackaged/main/default/objects/pse__Proj__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <formula>Total_Hours__c  - ( pse__Billable_External_Hours__c + pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Hours - Total Actual Hours</inlineHelpText>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>