unpackaged/main/default/objects/pse__Proj__c/fields/Remaining_Hours_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours_Migrated__c</fullName>
    <description>Remaining Hours from Data Migration..</description>
    <label>Remaining Hours (Migrated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>