unpackaged/main/default/objects/pse__Proj__c/fields/Revenue_Margin__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Margin__c</fullName>
    <description>Project Margin using Total Revenue To Date (populated via a flow) - all Costa assosicated fields on a Project to create a Revenue Margin field.</description>
    <formula>Total_Revenue_to_Date__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Margin using Total Revenue To Date (populated via a flow) - all Costa assosicated fields on a Project to create a Revenue Margin field.</inlineHelpText>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>