unpackaged/main/default/objects/pse__Proj__c/fields/Revenue_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Margin_Percentage__c</fullName>
    <description>Revenue Margin % - Revenue Margin / Total Revenue to Date</description>
    <formula>Revenue_Margin__c /  Total_Revenue_to_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>