unpackaged/main/default/objects/pse__Proj__c/fields/Scope_Clarity_Observance__c.field-meta.xml
<CustomField>
    <fullName>Scope_Clarity_Observance__c</fullName>
    <label>Scope Clarity &amp; Observance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>