unpackaged/main/default/objects/pse__Proj__c/fields/Show_Task_Based_Resource_Rpt__c.field-meta.xml
<CustomField>
    <fullName>Show_Task_Based_Resource_Rpt__c</fullName>
    <formula>HYPERLINK("/lightning/r/Report/" + $Setup.Task_Time_Split_Settings__c.Report_Id__c + "/view?queryScope=userFolders&amp;fv5=" + Id, "Launch Report")</formula>
    <label>Tasks Pending Resourcing Rpt</label>
    <type>Text</type>
</CustomField>