unpackaged/main/default/objects/pse__Proj__c/fields/Staffing_Resourcing__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Resourcing__c</fullName>
    <label>Staffing/Resourcing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>