unpackaged/main/default/objects/pse__Proj__c/fields/Task_Notes_Required__c.field-meta.xml
<CustomField>
    <fullName>Task_Notes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Notes are required on all tasks time entry.</inlineHelpText>
    <label>Task Notes Required</label>
    <type>Checkbox</type>
</CustomField>