unpackaged/main/default/objects/pse__Proj__c/fields/Template_Ref__c.field-meta.xml
<CustomField>
    <fullName>Template_Ref__c</fullName>
    <description>Reference to the source project template.</description>
    <label>Template Ref</label>
    <length>80</length>
    <type>Text</type>
</CustomField>