unpackaged/main/default/objects/pse__Proj__c/fields/Total_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Hours__c</fullName>
    <formula>pse__Credited_Non_Billable_Internal_Hours__c +  pse__Billable_External_Hours__c + pse__Billable_Internal_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>