unpackaged/main/default/objects/pse__Proj__c/fields/Total_Actual_Hours_tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Hours_tasks__c</fullName>
    <description>Total actual hours from tasks.</description>
    <label>Total Actual Hours (tasks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>