unpackaged/main/default/objects/pse__Proj__c/fields/Total_Est_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Total_Est_To_Complete__c</fullName>
    <description>Total Estimated Hours to Complete (tasks)</description>
    <label>Total Est To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>