unpackaged/main/default/objects/pse__Proj__c/fields/Total_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Estimated Hours (Tasks). Populated byDLRS  rollups</description>
    <inlineHelpText>The Total Estimated Hours from the Gantt.</inlineHelpText>
    <label>Total Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>