unpackaged/main/default/objects/pse__Proj__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>If ( 
        TEXT(pse__Billing_Type__c) = 'Fixed Price', 
        Project_Estimate_to_Complete__c,
       If (
             TEXT(pse__Billing_Type__c) = 'Time and Materials', 
             Total_Role_Budget_Hours__c ,
           If (
             TEXT(pse__Billing_Type__c) = 'Mixed', 
             Project_Estimate_to_Complete__c ,
            Total_Estimated_Hours__c 
              )
            )
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on Billing Type.
Fixed Price - Project Estimate to Complete
T&amp;M - Sum of of Role Budgets
Mixed - Sum of Milestone Planned Hours
Subscription - Total Estimated Hours</inlineHelpText>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>