unpackaged/main/default/objects/pse__Proj__c/fields/Total_Milestone_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Amount__c</fullName>
    <inlineHelpText>Sum of all Milestones.</inlineHelpText>
    <label>Total Milestone Amount</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>