unpackaged/main/default/objects/pse__Proj__c/fields/Total_Milestone_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Hours__c</fullName>
    <description>Sum of all Planned Hours from Milestones.</description>
    <label>Total Milestone Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>