unpackaged/main/default/objects/pse__Proj__c/fields/Total_Orginal_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Orginal_Estimated_Hours__c</fullName>
    <description>This is populated by the Baseline Process.</description>
    <inlineHelpText>The sum of all Estimated Hours from the Baseline Task Hours Process.</inlineHelpText>
    <label>Total Orginal Estimated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>