unpackaged/main/default/objects/pse__Proj__c/fields/Total_Revenue_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_to_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Rollup of all Records against this project with a Revenue Actuals template (Timecards, Misc Adjustments, Milestones). When % complete or Equal Split is used, a calculation will take place to pull the correct revenue value. Will be used in Flow "CTC - Project Revenue Rollup"</description>
    <inlineHelpText>Total Rollup of all Records against this project with a Revenue Actuals template (Timecards, Misc Adjustments, Milestones). When % complete or Equal Split is used, a calculation will take place to pull the correct revenue value.</inlineHelpText>
    <label>Total Revenue to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>