unpackaged/main/default/objects/pse__Proj__c/fields/Total_Role_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Role_Budget__c</fullName>
    <inlineHelpText>Sum of all Role Budget Amounts.</inlineHelpText>
    <label>Total Role Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>