unpackaged/main/default/objects/pse__Proj__c/fields/Total_Role_Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Role_Budget_Hours__c</fullName>
    <description>Sum of all Role Budget Hours. A rollup of all hours from role budgets.</description>
    <label>Total Role Budget Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>