unpackaged/main/default/objects/pse__Proj__c/fields/Trigger_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Refresh</label>
    <type>Checkbox</type>
</CustomField>