unpackaged/main/default/objects/pse__Proj__c/fields/Unscheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Unscheduled_Hours__c</fullName>
    <formula>pse__Planned_Hours__c -  pse__Total_Submitted_Hours__c -  pse__Scheduled_Hours_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Planned Hours - Submitted Hours - Scheduled Hours Remaining</inlineHelpText>
    <label>Unscheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>