unpackaged/main/default/objects/pse__Proj__c/recordTypes/Customer_Project.recordType-meta.xml
<RecordType>
    <fullName>Customer_Project</fullName>
    <active>true</active>
    <label>Customer Project</label>
</RecordType>