unpackaged/main/default/objects/pse__Proj__c/recordTypes/Internal_Project.recordType-meta.xml
<RecordType>
    <fullName>Internal_Project</fullName>
    <active>true</active>
    <label>Internal Project</label>
</RecordType>