unpackaged/main/default/objects/pse__Proj__c/validationRules/Billing_Required_on_Customer_Projects.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Required_on_Customer_Projects</fullName>
    <active>true</active>
    <description>Billing Type mandatory on all customer projects.</description>
    <errorConditionFormula>ISBLANK( TEXT(pse__Billing_Type__c) ) &amp;&amp;   RecordType.Name = "Customer Project"</errorConditionFormula>
    <errorDisplayField>pse__Billing_Type__c</errorDisplayField>
    <errorMessage>The Billing Type Field is mandatory on customer projects</errorMessage>
</ValidationRule>